Avancées dans la construction des pages : formulaires intégrés + structures et style des pages quasi terminées (reste quelques éléments à peaufiner). Prochaines étapes : adapter le responsive + intégrer Admin

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 # Ignorer l'index
 /index.php
 
-# Ignorer le fichier readme.md
+# Ignorer les fichier :
 /readme.md
+/question.txt
+/def.txt
+/autoptimize_404_handler.php
 
 # Ignorer les dossier  /updraft & /uploads
 /updraft
